--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-10-08
+Run date: 2018-10-11
 <br>Student User: jadenngo13
 <br>Project: think-java
 <br>
@@ -66,8 +66,8 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 71
-	You were off by: 58
+	The number I was thinking of was: 42
+	You were off by: 29
 	
 <--
 	[OUTPUT OK]
@@ -79,22 +79,11 @@ Enter a number: Your guess is: 13
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-13.049999999999999
-	1.0606601717798212
-	1.2160974411794894
-	
-<--
-	[OUTPUT OK]
-
 [SUMMARY] 
-	['Multadd: PASSED - EXCELLENT!']
+	['Multadd: MISSING (- 0.17)']
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] <font color="green">0.83</font></b>
 
 <hr>
 
